# epo

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: coverage.yml  e2e.yml  release.yml  test.yml
src/: date.rs  epo.rs  main.rs  util.rs
src/epo/: app.rs  arg.rs  date.rs  help.rs  print.rs  script.rs  types.rs  tz.rs  util.rs
tests/: arbitrary_tests.json  arbitrary_tests.py  integration_test.rs  requirements.txt  run_all.sh  run_arbitrary_tests.sh  test_epoch.sh
