[package]
name = "epo"
version = "0.1.0"
edition = "2021"
categories = ["command-line-utilities"]
description = "Handy epoch converter."
homepage = "https://github.com/wtetsu/epo"
license = "MIT"

[dependencies]
chrono = "0.4.19"
chrono-tz = "0.6.1"
once_cell = "1.10.0"
Boa = "0.13.0"
boa_engine = "0.14.0"

[profile.release]
lto = "fat"         # turn on Link-Time Optimizations
codegen-units = 1   # trade compile time with maximum optimization
opt-level = "z"     # optimize for size
