[package]
name = "epo"
version = "1.0.1"
edition = "2021"
categories = ["command-line-utilities"]
description = "Handy epoch converter."
homepage = "https://github.com/wtetsu/epo"
license = "MIT"

[dependencies]
chrono = "0.4.22"
chrono-tz = "0.8.0"
once_cell = "1.16.0"
Boa = "0.13.1"
boa_engine = "0.16.0"

[profile.release]
lto = "fat"         # turn on Link-Time Optimizations
codegen-units = 1   # trade compile time with maximum optimization
opt-level = "z"     # optimize for size
